# zephyr-semihost

./: .gitignore  README.md
scripts/: openocd.cfg
verification/unit/: CMakeLists.txt  prj.conf
verification/unit/include/: semihost_extra.c  semihost_extra.h  tc_util_user_override.h
verification/unit/src/: main.c
